# box

./: .coverage  .gitignore  README.md  analyze_head_turning.py  analyze_head_turning_simple.py  analyze_log.py  check_botsort.py  check_strongsort.py  compare_yolo_versions.py  exam-yolo11-pose-estimation.py  log_2025-05-03_152528フロア10minites_30sec_bytetrack_yolo11n_20250505_085229.csv  log_2025-05-03_152528フロア10minites_30sec_long_stay_yolov8n_20250506_135730.csv  log_2025-05-03_152528フロア10minites_30sec_long_stay_yolov8n_20250506_135914.csv  log_2025-05-03_152528フロア10minites_30sec_long_stay_yolov8n_20250506_140449.csv  log_2025-05-03_152528フロア10minites_30sec_long_stay_yolov8n_20250506_141055.csv  log_WIN_20250319_10_03_53_Pro_boosttrack_yolo11n_20250325_154919.csv  log_WIN_20250319_10_03_53_Pro_bytetrack_yolov8n_20250326_084243.csv  log_WIN_20250319_10_03_53_Pro_deepsort_yolo11n-pose_20250330_195353.csv  log_WIN_20250319_10_03_53_Pro_deepsort_yolo11n-pose_20250330_202108.csv  log_WIN_20250319_10_03_53_Pro_deepsort_yolo11n-pose_20250429_221816.csv  log_WIN_20250319_10_03_53_Pro_deepsort_yolov8n-pose_20250330_201109.csv  log_WIN_20250319_10_03_53_Pro_deepsort_yolov8n-pose_20250330_201205.csv  log_WIN_20250319_10_03_53_Pro_long_stay_yolov8n_20250430_011757.csv  log_WIN_20250319_10_03_53_Pro_long_stay_yolov8n_20250430_014250.csv  log_WIN_20250319_10_03_53_Pro_long_stay_yolov8n_20250430_014647.csv  log_WIN_20250319_10_03_53_Pro_long_stay_yolov8n_20250430_084829.csv  log_WIN_20250319_10_03_53_Pro_long_stay_yolov8n_20250520_195627.csv  log_WIN_20250319_10_03_53_Pro_strongsort_20250325_154219.csv  log_WIN_20250319_10_03_53_Pro_strongsort_yolo11n-pose_20250326_084426.csv  log_WIN_20250319_10_03_53_Pro_strongsort_yolo11n-pose_20250326_085417.csv  log_WIN_20250319_10_03_53_Pro_strongsort_yolo11n-pose_20250326_180331.csv  log_WIN_20250319_10_03_53_Pro_strongsort_yolo11n_20250326_084522.csv  log_WIN_20250319_10_03_53_Pro_strongsort_yolo11n_20250326_085823.csv  log_WIN_20250319_10_03_53_Pro_strongsort_yolo11n_20250326_090055.csv  pose_output_20250325_171821.csv  pyproject.toml  pytest.ini  requirements-dev.txt  run_head_detection.py  run_tests.sh  (+3 more)
analysis/: create_landmark_video.py  summary_stats.csv  visualize_landmarks.py
bytetrack/: compare_resolution_yolov11_bytetrack.py  detect_long_stay_bytetrack.py
config/: directory_structure_changes.yaml  stick_figure_detector_concrete.yaml  stick_figure_detector_implementation.yaml  実装.yaml  抽象.yaml
diagrams/: README.md  code_quality_system.md  detect_long_stay_flow.md
head_detection/: stick_figure_detector.py
logs/: head_detection_log_20250325_163704.csv  head_detection_log_20250325_163923.csv  head_detection_log_20250325_164050.csv  head_detection_log_20250325_164214.csv  head_detection_log_20250325_164403.csv  head_detection_log_20250325_164631.csv  skeleton_data_20250413_161655.csv  skeleton_data_20250413_231131.csv  stick_figure_events_20250325_165436.csv  stick_figure_events_20250325_165629.csv  stick_figure_events_20250413_161458.csv  stick_figure_events_20250413_161655.csv  stick_figure_events_20250413_231131.csv  stick_figure_log_20250325_165436.csv  (+7 more)
scripts/: README.md  (+24 more)
(+36 files in other folders)
