[project]
name = "box"
version = "0.1.0"
description = ""
authors = [
    {name = "User Name",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "boxmot (>=12.0.1,<13.0.0)",
    "ultralytics (>=8.3.91,<9.0.0)",
    "setuptools (>=76.0.0,<77.0.0)",
    "onnxruntime (>=1.21.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
