[project]
name = "box"
version = "0.1.0"
description = "Object tracking and head pose detection system"
authors = [
    {name = "User Name",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.tracking.dependencies]
boxmot = ">=12.0.1,<13.0.0"
ultralytics = ">=8.3.91,<9.0.0"
onnxruntime = ">=1.21.0,<2.0.0"
opencv-python = ">=4.7.0,<5.0.0"
numpy = ">=1.24.0,<2.0.0"
torch = ">=2.0.0,<3.0.0"
torchvision = ">=0.15.0,<1.0.0"
gdown = ">=5.1.0,<6.0.0"

[tool.poetry.group.head_pose.dependencies]
mediapipe = ">=0.10.11,<0.11.0"
opencv-python = ">=4.7.0,<5.0.0"
numpy = ">=1.24.0,<2.0.0"
pandas = ">=2.2.1,<3.0.0"
scipy = ">=1.12.0,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
