[project]
name = "box"
version = "0.1.0"
description = "Object tracking and head pose detection system"
authors = [
    {name = "User Name",email = "user@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.tracking.dependencies]
boxmot = ">=12.0.1,<13.0.0"
ultralytics = ">=8.3.91,<9.0.0"
onnxruntime = ">=1.21.0,<2.0.0"
opencv-python = ">=4.7.0,<5.0.0"
numpy = ">=1.24.0,<2.0.0"
torch = ">=2.0.0,<3.0.0"
torchvision = ">=0.15.0,<1.0.0"
gdown = ">=5.1.0,<6.0.0"

[tool.poetry.group.head_pose.dependencies]
mediapipe = ">=0.10.11,<0.11.0"
opencv-python = ">=4.7.0,<5.0.0"
numpy = ">=1.24.0,<2.0.0"
pandas = ">=2.2.1,<3.0.0"
scipy = ">=1.12.0,<2.0.0"


[tool.poetry.group.dev.dependencies]
ruff = ">=0.2.0"
pytest = ">=7.4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff の設定
[tool.ruff]
# 最大行長
line-length = 100

# 対象とする Python バージョン
target-version = "py310"

# 有効にするルール
select = [
    "E",    # pycodestyle エラー
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
]

# 無視するルール
ignore = []

# 自動修正を適用するルール
fixable = ["ALL"]

# 除外するファイルやディレクトリ
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.pyc",
]

# インポートをフォーマットする設定
[tool.ruff.format]
# Black 互換のフォーマッティング
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# インポートの整理に関する設定
[tool.ruff.isort]
known-first-party = ["scripts", "src"]
